Remove padding in Stats container for small viewports to fix alignment

--- a/public_html/css/custom-sections.css
+++ b/public_html/css/custom-sections.css
@@ -487,9 +487,14 @@
     display: none;
   }
 
+  #stats .container {
+    padding: 0;
+  }
+
   .count-text {
     font-size: 14px;
   }
+
 }
 
 /******************************
